--- a/index.html
+++ b/index.html
@@ -112,7 +112,23 @@
                 <h2 class="title is-3">Abstract</h2>
                 <div class="content has-text-justified">
                     <p>
-                        We introduce a novel approach for scalable domain adaptation in cloud robotics scenarios where robots rely on third-party AI inference services powered by large pre-trained deep neural networks. Our method is based on a downstream proposal-refinement stage running locally on the robots, explotiting a new lightweight DNN architecture, R2SNet. This architecture aims to mitigate performance degradation from domain shifts by adapting the object detection process to the target environment, focusing on relabeling, rescoring, and suppression of bounding-box proposals. Our method allows for local execution on robots, addressing the scalability challenges of domain adaptation without incurring significant computational costs. Real-world results on mobile service robots performing door detection show the effectiveness of the proposed method in achieving scalable domain adaptation.                     </p>
+                        Multi-robot rendezvous and exploration are fundamental challenges in the domain of mobile
+                        robotic systems. This paper addresses the coordination problem of enabling multiple robots
+                        to efficiently converge on a common location within an initially unknown and 
+                        communication-restricted indoor environment. The robots start from distinct 
+                        locations with no prior knowledge of the environment's layout or any pre-established meeting 
+                        point. Communication is only possible after rendezvous, adding an extra layer of complexity.
+                        In this context, we propose a novel approach that integrates exploration and rendezvous into 
+                        a unified strategy, hence bridging the gap between the two. Traditionally, exploration has 
+                        been focused on rapidly mapping the environment, often leading to suboptimal rendezvous 
+                        performance in later stages. Our method adapts standard frontier-based exploration techniques, 
+                        prioritizing frontiers not only for map expansion but also for rendezvous opportunities. We 
+                        introduce a mechanism that allows robots to "forget" previously explored regions, redirecting 
+                        their attention to re-explore them thus enhancing rendezvous likelihood. To evaluate our 
+                        approach, we conduct experiments in realistic 3D simulations using ROS, showcasing its 
+                        effectiveness in achieving faster rendezvous times compared to conventional exploration 
+                        strategies while maintaining a comparable level of environmental coverage.
+                    </p>
                 </div>
             </div>
         </div>
