removed wrong link

--- a/index.html
+++ b/index.html
@@ -229,18 +229,17 @@
 }</code></pre>
     </div>
 </section>
--->
 
 <footer class="footer">
     <div class="container">
         <div class="content has-text-centered">
-            <a class="icon-link" href="../papers/holodeck.pdf" class="external-link" disabled>
+            <a class="icon-link" href="" class="external-link" disabled>
                 <i class="fas fa-file-pdf"></i>
             </a>
-            <a class="icon-link" href="https://arxiv.org/abs/2312.09067" class="external-link" disabled>
+            <a class="icon-link" href="" class="external-link" disabled>
                 <i class="ai ai-arxiv"></i>
             </a>
-            <a class="icon-link" href="https://github.com/aislabunimi/door-detection-long-term/tree/bbox_filtering" class="external-link" disabled>
+            <a class="icon-link" href="" class="external-link" disabled>
                 <i class="fab fa-github"></i>
             </a>
 
