--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
                     </h1>
                     <div class="is-size-5 publication-authors">
                     <span class="author-block">
-              <a href="https://github.com/maurotella">Mauro Tellaroli</a><sup>1</sup>,
+              <a href="https://github.com/maurotella">Mauro Tellaroli</a>,
             </span>
                         <span class="author-block">
-              <a href="http://luperto.di.unimi.it">Matteo Luperto</a><sup>1</sup>,
+              <a href="http://luperto.di.unimi.it">Matteo Luperto</a>,
             <span class="author-block">
-              <a href="https://antonazzi.di.unimi.it">Michele Antonazzi</a><sup>1</sup>,
+              <a href="https://antonazzi.di.unimi.it">Michele Antonazzi</a>,
             </span>
                         <span class="author-block">
-              <a href="https://basilico.di.unimi.it">Nicola Basilico</a><sup>1</sup>,
+              <a href="https://basilico.di.unimi.it">Nicola Basilico</a>,
             </span>
-
+                        </span>
                     </div>
                     <div class="is-size-5 publication-authors">
-                        <span class="author-block"><sup>1</sup></span></sup>All authors are with the Department of Computer Science, University of
+                        <span class="author-block"></span></sup>All authors are with the Department of Computer Science, University of
                         Milan, Milano, Italy</span>&nbsp;&nbsp;
 
                     </div>
 
                     <div class="is-size-5 emails">
             <span class="emails">
-              <a href="mailto: yueyang1@seas.upenn.edu">name.surname@unimi.it</a>&nbsp;&nbsp;
+              <a href="">name.surname@unimi.it</a>&nbsp;&nbsp;
             </span>
 
                     </div>
@@ -74,7 +74,7 @@
 
                             <!-- arxiv Link. -->
                             <span class="link-block">
-                <a href=""
+                <a href="https://doi.org/10.48550/arXiv.2403.11617"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -84,7 +84,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/aislabunimi/door-detection-long-term/tree/bbox_filtering"
+                <a href="https://github.com/aislabunimi/multirobot_exploration_rendezvous"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -112,22 +112,7 @@
                 <h2 class="title is-3">Abstract</h2>
                 <div class="content has-text-justified">
                     <p>
-                        Multi-robot rendezvous and exploration are fundamental challenges in the domain of mobile
-                        robotic systems. This paper addresses the coordination problem of enabling multiple robots
-                        to efficiently converge on a common location within an initially unknown and 
-                        communication-restricted indoor environment. The robots start from distinct 
-                        locations with no prior knowledge of the environment's layout or any pre-established meeting 
-                        point. Communication is only possible after rendezvous, adding an extra layer of complexity.
-                        In this context, we propose a novel approach that integrates exploration and rendezvous into 
-                        a unified strategy, hence bridging the gap between the two. Traditionally, exploration has 
-                        been focused on rapidly mapping the environment, often leading to suboptimal rendezvous 
-                        performance in later stages. Our method adapts standard frontier-based exploration techniques, 
-                        prioritizing frontiers not only for map expansion but also for rendezvous opportunities. We 
-                        introduce a mechanism that allows robots to "forget" previously explored regions, redirecting 
-                        their attention to re-explore them thus enhancing rendezvous likelihood. To evaluate our 
-                        approach, we conduct experiments in realistic 3D simulations using ROS, showcasing its 
-                        effectiveness in achieving faster rendezvous times compared to conventional exploration 
-                        strategies while maintaining a comparable level of environmental coverage.
+                        Multi-robot rendezvous and exploration are fundamental challenges in the domain of mobile robotic systems. This paper addresses multi-robot rendezvous within an initially unknown environment where communication is only possible after the rendezvous. Traditionally, exploration has been focused on rapidly mapping the environment, often leading to suboptimal rendezvous performance in later stages. We adapt a standard frontier-based exploration technique to integrate exploration and rendezvous into a unified strategy, with a mechanism that allows robots to re-visit previously explored regions thus enhancing rendezvous opportunities. We validate our approach in 3D realistic simulations using ROS, showcasing its effectiveness in achieving faster rendezvous times compared to exploration strategies.
                     </p>
                 </div>
             </div>
@@ -136,96 +121,82 @@
     </div>
 </section>
 
-<section class="section" id="demo">
-    <div class="container is-max-desktop has-text-centered">
-        <div class="container is-clipped">
-            <div id="slider">
-                <div class="card">
-                    <div class="card-image">
-                        <figure class="image ">
-                            <img
-                                    src="static/images/scenario.png"
-                                    alt=""
-                            />
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="item__title">
-                            Application scenario
-                        </div>
-                        <div class="item__description">
-                            <!--Ici une petite description pour tester le slider-->
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">
-                        <figure class="image is-covered ">
-                            <img
-                                    src="static/images/main_architecture.png"
-                                    alt=""
-                            />
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="item__title">
-                            Main Architecture
-                        </div>
-                        <div class="item__description">
-                            <!--Ici une petite description pour tester le slider-->
-                        </div>
-                    </div>
-                </div>
+<section class="section", id="scenario">
+    <div class="container is-max-desktop">
+        <!-- Abstract. -->
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-five-fifths">
+                <h2 class="title is-3">Scenario</h2>
 
-                <div class="card">
-                    <div class="card-image">
-                        <figure class="image is-covered ">
-                            <img
-                                    src="static/images/background_network.png"
-                                    alt=""
-                            />
-                        </figure>
+                <div class="content has-text-justified">
+                    <p>
+                        We consider the rendezvous problem for a
+                        team of autonomous mobile robots in the challenging setting
+                        of a communication-restricted and initially unknown
+                        indoor environment. We assume that the robots start from
+                        different arbitrary locations, but no map of the environment
+                        is available to any of them and no pre-determined meeting
+                        location or coordination strategy has been agreed upon. The
+                        communication in the environment is restricted to occur only
+                        after a rendezvous.
+
+                    </p>
+                </div>
+                <div class="columns">
+                    <div class="column is-half">
+                        <img src="static/images/range.png">
+                        <p style="font-size: 0.8em">Minimum range constraint.</p>
                     </div>
-                    <div class="card-content">
-                        <div class="item__title">
-                            BFNet
-                        </div>
-                        <div class="item__description">
-                            <!--Ici une petite description pour tester le slider-->
-                        </div>
+                    <div class="column is-half">
+                        <img src="static/images/lineofsight.png" >
+                        <p style="font-size: 0.8em">Line of sight.</p>
                     </div>
                 </div>
+                <div class="content has-text-justified">
+                    <p>
+                        The difficulty of the rendezvous problem is
+                        augmented by the fact that the MRS needs to simultaneously
+                        perform an online exploration task, as the environment
+                        is unknown. The widely used <b>frontier-based exploration</b> strategy is in contrast with what is required by
+                        an efficient rendezvous, which, in principle, does not strictly
+                        require building a complete map.
 
+                    </p>
+                </div>
+                <div class="columns">
+                    <div class="column is-half">
+                        <p style="font-size: 1em"><b>Exploration</b></p>
+                        <video autoplay muted playsinline loop >
+                            <source src="./static/videos/exploration.mp4" type="video/mp4">
+                        </video>
+
+                    </div>
+                    <div class="column is-half">
+
+                        <p style="font-size: 1em"><b>Rendezvous</b></p>
+                        <video autoplay muted playsinline loop>
+                            <source src="./static/videos/rendezvous3.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="content is-centered">
+
+                </div>
 
             </div>
         </div>
-        <script>
-            bulmaCarousel.attach('#slider', {
-                slidesToScroll: 1,
-                slidesToShow: 1,
-                infinite: true,
-            });
-        </script>
-        <!--
-        <p class="has-text-centered">
-            <span class="dnerf">Holodeck</span> can generate diverse types of 3D environments (arcade, spa, museum), customize for styles (victorian, bohemian), and understand fine-grained requirements ("has a cat", "fan of Star Wars").
-        </p>
-        -->
+        <!--/ Abstract. -->
     </div>
 </section>
-
-
-
-
-
-
-
 
 
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
         <h2 class="title is-3">BibTeX</h2>
-        <pre style="font-size: 16px;"><code>@article{TODO
+        <pre style="font-size: 16px;"><code>@misc{tellaroli2024frontierbased,
+      title={Frontier-Based Exploration for Multi-Robot Rendezvous in Communication-Restricted Unknown Environments},
+      author={Mauro Tellaroli and Matteo Luperto and Michele Antonazzi and Nicola Basilico},
+      year={2024}
 }</code></pre>
     </div>
 </section>
@@ -233,13 +204,10 @@
 <footer class="footer">
     <div class="container">
         <div class="content has-text-centered">
-            <a class="icon-link" href="" class="external-link" disabled>
-                <i class="fas fa-file-pdf"></i>
-            </a>
-            <a class="icon-link" href="" class="external-link" disabled>
+            <a class="icon-link" href="https://doi.org/10.48550/arXiv.2403.11617" class="external-link" disabled>
                 <i class="ai ai-arxiv"></i>
             </a>
-            <a class="icon-link" href="" class="external-link" disabled>
+            <a class="icon-link" href="https://github.com/aislabunimi/multirobot_exploration_rendezvous" class="external-link" disabled>
                 <i class="fab fa-github"></i>
             </a>
 
