--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         <video autoplay muted playsinline loop>
                             <source src="./static/videos/frontiers.mp4" type="video/mp4">
                         </video>
-                        <p style="font-size: 0.8em">A robot navigating with it exploration trace (in red). Frontiers for exploration and rendezvous (hallucinated) are in blue and green.</p>
+                        <p style="font-size: 0.8em">A robot navigating with its exploration trace (in red). Frontiers for exploration and rendezvous (hallucinated) are in blue and green.</p>
 
                     </div>
                     <div class="column is-half">
@@ -301,7 +301,7 @@
                 </div>
                 <div class="content">
                     <p style="font-size: 0.8em">
-                        Rendezvous paths obtained with our method (FBR – first row) and the baseline (FBE – second row) in a series of environments.
+                        Rendezvous paths obtained with our method (FBR - first row) and the baseline (FBE - second row) in a series of environments.
                     </p>
                     <img src="static/images/maps_final.png">
 
